# py-template

./: .gitignore  .mypy.ini  README.md  justfile  pyproject.toml  pyrefly.toml  ruff.toml
docker/: .dockerignore  docker-compose.yml  my_compose.yml
src/test/: test_main.py
