[project]
name = "template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.9.2",
    "pycryptodome==3.20.0",
    "pendulum>=3.0.0",
    "loguru>=0.7.3",
    "yarl>=1.19.0",
    "tenacity>=9.1.2"    
    "attrs>=25.3.0"

]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-asyncio",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]


# Exclude a variety of commonly ignored directories.
exclude = []

[tool.pytest.ini_options]
color = "yes"
asyncio_default_fixture_loop_scope = "module"
